# VulkanRenderer

./: CMakeLists.txt
shaders/: compile_shaders.sh  frag.spv  shader.vert  vert.spv
src/: Device.hpp  Memory.hpp  QueueFamilyIndices.hpp  Shader.hpp  SwapChain.hpp  SwapChainSupportDetails.hpp  UniformBufferObject.hpp  Validation.hpp  Vertex.hpp  VulkanTestApp.cpp  VulkanTestApp.hpp  main.cpp
src/input/: Input.cpp
